kube_manifest/07_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: hello-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    ingressClassName: nginx
    rules:
      - host: "arch.homework"
        http:
            paths:
              - path: /otusapp/sadmitriev/(.*)
                pathType: Prefix
                backend:
                    service:
                        name: mhealth-service
                        port:
                            number: 8082
